Edit some chart data

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -13,11 +13,11 @@
 
     "SmtpPort": "465",
 
-    "SmtpUsername": "17520437@gm.uit.edu.vn",
+    "SmtpUsername": "17521067@gm.uit.edu.vn",
 
-    "SmtpPassword": "1881812791",
+    "SmtpPassword": "lanthao123",
 
-    "FromAddress": "17520437@gm.uit.edu.vn",
+    "FromAddress": "17521067@gm.uit.edu.vn",
 
     "EnableSsl": "true",
 
